<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Logbuch"
    android:orientation="vertical"
    android:background="@color/colorBackground">


    <TextView
        android:id="@+id/tv_Logbucheintrag"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="13dp"
        android:text="@string/headline_logbuch"
        android:textColor="@android:color/background_dark"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_Kapitel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_Kapitel"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp"
        android:text="@string/grundlagen"
        android:textColor="@android:color/background_dark"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/iv_piratenschiff_log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_piratenschiff_log"
        android:layout_width="218dp"
        android:layout_height="153dp"
        android:contentDescription="@string/desc"
        app:layout_constraintBottom_toTopOf="@+id/bt_Bordbuch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Kapitel"
        app:srcCompat="@drawable/piratenschiff" />

    <Button
        android:id="@+id/bt_Bordbuch"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:background="@color/colorButton"
        android:text="@string/bt_bordbuch"
        app:layout_constraintBottom_toTopOf="@+id/bt_Abfrage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_Abfrage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="42dp"
        android:background="@color/colorButton"
        android:text="@string/bt_abfrage"
        app:layout_constraintBottom_toTopOf="@+id/bt_Bordbuch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_Prüfung" />

    <Button
        android:id="@+id/bt_Prüfung"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="100dp"
        android:background="@color/colorButton"
        android:text="@string/bt_prüfung"
        android:textColor="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_Bordbuch"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>