<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/colorBackground"
    tools:ignore="ContentDescription"
    tools:context=".Bordbuch">

    <TextView
        android:id="@+id/tv_bordbuch"
        android:text="@string/headline_bordbuch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        android:textSize="35sp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/tv_grundlagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:textColor="@android:color/background_dark"
        android:text="@string/underheadline_bordbuch_grundlagen"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="@id/tv_bordbuch" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="375dp"
        android:layout_height="129dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="142dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="32dp"
        app:srcCompat="@drawable/tabelle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="475dp"
        android:layout_below="@+id/imageView3"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="-19dp"
        android:layout_marginBottom="0dp">


        <EditText
            android:id="@+id/et_grundlagen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_bordbuch"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:text="@string/large_text_grundlagen"/>

    </ScrollView>


</RelativeLayout>
