<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".Statistik">

    <TextView
        android:id="@+id/tv_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Aktuelles_Level: 1"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gesamt"
        app:layout_constraintVertical_bias="0.103" />

    <ImageButton
        android:id="@+id/ib_backStatistik"
        android:layout_width="59dp"
        android:layout_height="58dp"
        android:layout_marginEnd="43dp"
        android:background="@null"
        android:layout_marginBottom="103dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_backbutton_foreground"
        android:contentDescription="@string/desc" />

    <ImageView
        android:id="@+id/iv_schatzkiste"
        android:layout_width="155dp"
        android:layout_height="110dp"
        android:layout_marginBottom="5dp"
        android:contentDescription="@string/desc"
        app:layout_constraintBottom_toTopOf="@+id/tv_schatz_des_hollaenders"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/schatz3" />

    <TextView
        android:id="@+id/tv_schatz_des_hollaenders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/tv_schatz"
        android:textColor="@android:color/background_dark"
        android:textSize="35sp"
        app:fontFamily="@font/geschwungen"
        app:layout_constraintBottom_toTopOf="@+id/tv_gesamtfortschritt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_schatzkiste" />

    <ProgressBar
        android:id="@+id/pb_Statistik"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:indeterminate="false"
        android:max="100"
        android:progressDrawable="@drawable/customprogressbar"
        android:secondaryProgress="100"
        app:layout_constraintBottom_toTopOf="@+id/tv_gesamt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gesamtfortschritt"
        app:layout_constraintVertical_bias="0.64"></ProgressBar>

    <TextView
        android:id="@+id/tv_gesamtfortschritt"
        android:layout_width="254dp"
        android:layout_height="61dp"
        android:gravity="center"
        android:text="@string/tv_gesamtfortschritt"
        android:textColor="@android:color/background_dark"
        android:textSize="25sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_schatz_des_hollaenders" />

    <TextView
        android:id="@+id/tv_gesamt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="304dp"
        android:text="Gesamtfortschritt: 0%"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_gesamtfortschritt" />

</androidx.constraintlayout.widget.ConstraintLayout>